--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^14.18.0",
     "contentful": "^8.4.2",
     "express": "^4.17.1",
+    "heroku": "^7.59.2",
     "typescript": "^4.5.2"
   }
 }
