--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "contentful": "^8.4.2",
     "express": "^4.17.1",
     "heroku": "^7.59.2",
+    "storyblok-js-client": "^4.1.6",
     "typescript": "^4.5.2"
   }
 }
