--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "heroku": "^7.59.2",
     "storyblok-js-client": "^4.1.6",
     "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "g-sheets-api": "^2.1.2"
   }
 }
