--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "express": "^4.17.1",
     "heroku": "^7.59.2",
     "storyblok-js-client": "^4.1.6",
-    "typescript": "^4.5.2"
-  },
-  "devDependencies": {
+    "typescript": "^4.5.2",
     "g-sheets-api": "^2.1.2"
-  }
+  },
+  "devDependencies": {}
 }
